--- a/src/app/register-product/register-product.component.html
+++ b/src/app/register-product/register-product.component.html
@@ -1,1 +1,44 @@
-<p>register-product works!</p>
+<div class="container mt-5 ">
+    <div class="jumbotron jumbotron-fluid rounded ">
+        <div class="container">
+          <h1 class="display-4 text-center">Register Product</h1>
+
+          
+          <div class="row">
+        
+            <div class="col-8 offset-2">
+
+                <div class="alert alert-warning alert-dismissible fade show" *ngIf='registration_status' role="alert">
+                    <strong>{{registration_message}}!</strong> 
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+
+                <form enctype="multipart/form-data" #registrationdata='ngForm' (ngSubmit)="addProduct(registrationdata.value)">
+                    <div class="form-row">
+                      <div class="form-group col-12">
+                        <label for="product_name">Product Name</label>
+                        <input type="text" name="product_name" class="form-control" id="Restaurant_name" placeholder="Enter Product Name" ngModel required>
+                      </div>
+                  
+                    <div class="form-group col-12">
+                      <label for="inputAddress">Product Price</label>
+                      <input type="text" name="product_price" class="form-control" id="inputAddress" placeholder="Enter Product Price" ngModel required>
+                    </div>
+                    
+                    <div class="form-group col-12">
+                      <label for="inputAddress2">Product category</label>
+                      <input type="text" name="product_category" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" ngModel required>
+                    </div>
+                    
+                    <button type="submit" [disabled]="registrationdata.form.invalid" class="btn btn-primary">Register</button>
+                    </div>
+                  </form>
+            </div>
+        
+          </div>
+          
+        </div>
+    </div>
+</div>
