--- a/src/app/restaurant-registration/restaurant-registration.component.html
+++ b/src/app/restaurant-registration/restaurant-registration.component.html
@@ -5,10 +5,8 @@
 
           
           <div class="row">
-            <div class="col-2">
-              
-            </div>
-            <div class="col-8">
+        
+            <div class="col-8 offset-2">
 
                 <div class="alert alert-warning alert-dismissible fade show" *ngIf='registration_status' role="alert">
                     <strong>{{registration_message}}!</strong> 
@@ -66,9 +64,7 @@
                     </div>
                   </form>
             </div>
-            <div class="col-2">
-              
-            </div>
+        
           </div>
           
         </div>
