--- a/src/app/restaurant-home/restaurant-home.component.html
+++ b/src/app/restaurant-home/restaurant-home.component.html
@@ -19,7 +19,7 @@
     <thead>
       <tr class="text-primary text-center font-weight-bold">
         <th scope="col">S.NO</th>
-        <th scope="col">Restaurant Name</th>
+        <th scope="col">Restaurant Namejkdfjlk;dsjldfsjlds</th>
         <th scope="col">Restaurant Opening Hours</th>
         <th scope="col">Restaurant Address</th>
         <th scope="col">Add Product</th>
