--- a/src/app/register-restaurant/register-restaurant.component.html
+++ b/src/app/register-restaurant/register-restaurant.component.html
@@ -64,8 +64,19 @@
                         <label class="custom-file-label" for="inputGroupFile01" >Choose file</label>
                       </div>
                     </div>
+                    <div class="d-flex justify-content-around">
+                      <div>
+                        <button type="submit" [disabled]="registrationdata.form.invalid" class="btn btn-primary">Register</button>
+                      </div>
+                     
+                    <div class="ml-5">
+                      <button type="button " class="btn btn-primary">
+                        <a class="text-white" style="text-decoration: none;" routerLink="/">Back to Home </a>
+                      </button>
+                    </div>
+                   
+                    </div>
                     
-                    <button type="submit" [disabled]="registrationdata.form.invalid" class="btn btn-primary">Register</button>
                     </div>
                   </form>
             </div>
