--- a/src/app/register-product/register-product.component.html
+++ b/src/app/register-product/register-product.component.html
@@ -1,9 +1,10 @@
 <div class="row m-5">
-    <div class="col">
+  <!-- this section is for dispalying the Products -->
+    <div class="col">   
         <div class="text-center mt-5 d-flex justify-content-between">
             <button type="button" (click)="display_products()" class="btn btn-primary">
                 {{dispaly_productBTN_text}}
-              </button>
+            </button>
 
               <div class="ml-5">
                 <button type="button " class="btn btn-primary">
@@ -11,10 +12,16 @@
                 </button>
               </div>
         </div>
-        
+        <div class="alert alert-warning alert-dismissible fade show" *ngIf='delete_msg_status' role="alert">
+          <strong>{{deletion_message}}!</strong> 
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
         
         
         <div class="container mt-5" *ngIf="show_products">
+          <h4 class="text-center text-danger font-weight-bold m-2">{{restaurant_name|uppercase}} Restaurant Product</h4>
             <table class="table table-hover table-striped">
               <thead>
                 <tr class="text-primary text-center font-weight-bold">
@@ -23,6 +30,7 @@
                   <th scope="col">Product Price</th>
                   <th scope="col">Product category</th>
                   <th scope="col">Restaurant Image</th>
+                  <th scope="col">Action</th>
                 </tr>
               </thead>
               <tbody>
@@ -31,7 +39,12 @@
                   <td> {{product.name}}</td>
                   <td>{{product.price}}</td>
                   <td> {{product.category}}</td>
-                  <td >Restaurant Image</td>
+                  <td> product Image</td>
+                  <td >
+                    <button type="button" (click)="delete_product(product._id)" class="btn btn-primary">
+                      Delete Product
+                    </button>
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -39,7 +52,7 @@
     </div>
 
 
-
+<!-- this section is for displaying the product registration forms -->
     <div class="col">
 
         <div class="text-center mt-5">
@@ -54,8 +67,7 @@
                   <h1 class="display-4 text-center">Register Product</h1>
         
                   
-                  <div class="row">
-                
+                  <div class="row"> 
                     <div class="col-8 offset-2">
         
                         <div class="alert alert-warning alert-dismissible fade show" *ngIf='registration_status' role="alert">
@@ -93,6 +105,8 @@
             </div>
         </div>
     </div>
+
+
 </div>
 
 
