--- a/src/app/register-restaurant/register-restaurant.component.html
+++ b/src/app/register-restaurant/register-restaurant.component.html
@@ -8,7 +8,7 @@
            
             <div class="col-8 offset-2">
 
-                <div class="alert alert-warning alert-dismissible fade show" *ngIf='registration_status' role="alert">
+                <div class="alert alert-warning alert-dismissible fade show" *ngIf='registration_msg_status' role="alert">
                     <strong>{{registration_message}}!</strong> 
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="d-flex justify-content-around">
                       <div>
-                        <button type="submit" [disabled]="registrationdata.form.invalid" class="btn btn-primary">Register</button>
+                        <button type="submit" (click)="addProduct()" [disabled]="registrationdata.form.invalid" class="btn btn-primary">Register</button>
                       </div>
                      
                     <div class="ml-5">
