--- a/src/app/restaurant-home/restaurant-home.component.html
+++ b/src/app/restaurant-home/restaurant-home.component.html
@@ -13,13 +13,13 @@
 <router-outlet></router-outlet>
 
 
-
+<!-- display register_restaurants in tablular form -->
 <div class="container mt-5" *ngIf="show_restaurant">
   <table class="table table-hover table-striped">
     <thead>
       <tr class="text-primary text-center font-weight-bold">
         <th scope="col">S.NO</th>
-        <th scope="col">Restaurant Namejkdfjlk;dsjldfsjlds</th>
+        <th scope="col">Restaurant Name</th>
         <th scope="col">Restaurant Opening Hours</th>
         <th scope="col">Restaurant Address</th>
         <th scope="col">Add Product</th>
@@ -51,50 +51,3 @@
 
 
 
-
-
-
-
-
-
-
-
-
-<!-- 
-
-
-
-<div >
-  <div class="">
-    <div class="row text-primary text-center font-weight-bold">
-      <div class="col-sm">
-        
-      </div>
-      <div class="col-sm">
-        
-      </div>
-      <div class="col-sm">
-        
-      </div>
-      <div class="col-sm">
-        Restaurant Image
-      </div>
-    </div>
-    <hr>
-    <div class="row text-center table-hover" >
-      <div class="col-sm">
-       
-      </div>
-      <div class="col-sm">
-       
-      </div>
-      <div class="col-sm">
-        
-      </div>
-      <div class="col-sm">
-        Image
-      </div>
-    </div>
-    <hr>
-  </div>
-</div> -->
