--- a/src/app/register-restaurant/register-restaurant.component.html
+++ b/src/app/register-restaurant/register-restaurant.component.html
@@ -55,15 +55,17 @@
                       </div>
                     </div>
                     
-                    <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text">Upload</span>
+
+
+                  
+                      <div class="text-center">
+                        <input class="form-control" type="file" 
+                        name="restaurant_image" (change)="onChange($event)">
                       </div>
-                      <div class="custom-file">
-                        <input type="file" name="restaurant_image" class="custom-file-input" id="inputGroupFile01" (change)="selectImage($event)">
-                        <label class="custom-file-label" for="inputGroupFile01" >Choose file</label>
-                      </div>
-                    </div>
+
+
+
+
                     <div class="d-flex justify-content-around">
                       <div>
                         <button type="submit" (click)="addProduct()" [disabled]="registrationdata.form.invalid" class="btn btn-primary">Register</button>
@@ -71,7 +73,7 @@
                      
                     <div class="ml-5">
                       <button type="button " class="btn btn-primary">
-                        <a class="text-white" style="text-decoration: none;" routerLink="/">Back to Home </a>
+                        <a class="text-white" style="text-decoration: none;" routerLink="/">Back To Home </a>
                       </button>
                     </div>
                    
