saving of img on data base done

--- a/src/app/register-restaurant/register-restaurant.component.html
+++ b/src/app/register-restaurant/register-restaurant.component.html
@@ -54,17 +54,12 @@
                         <input type="text"  class="form-control" id="inputZip" name="restaurant_zipcode" ngModel required>
                       </div>
                     </div>
-                    
-
-
-                  
-                      <div class="text-center">
-                        <input class="form-control" type="file" 
+                   
+                      <div class="form-group col-12">
+                        <label for="restaurant_image">restaurant_image</label>
+                        <input class="form-control" type="file" id="restaurant_image"
                         name="restaurant_image" (change)="onChange($event)">
                       </div>
-
-
-
 
                     <div class="d-flex justify-content-around">
                       <div>
