--- a/src/app/register-product/register-product.component.html
+++ b/src/app/register-product/register-product.component.html
@@ -39,7 +39,9 @@
                   <td> {{product.name}}</td>
                   <td>{{product.price}}</td>
                   <td> {{product.category}}</td>
-                  <td> product Image</td>
+                  <td> 
+                 IMg
+                  </td>
                   <td >
                     <button type="button" (click)="delete_product(product._id)" class="btn btn-primary">
                       Delete Product
@@ -88,7 +90,13 @@
                               <label for="inputAddress">Product Price</label>
                               <input type="text" name="product_price" class="form-control" id="inputAddress" placeholder="Enter Product Price" ngModel required>
                             </div>
-        
+
+                            <div class="form-group col-12">
+                              <label for="restaurant_image">Product Image</label>
+                              <input class="form-control" type="file" id="restaurant_image"
+                              name="restaurant_image" (change)="onChange($event)">
+                            </div>
+
                             <div class="form-group col-12">
                               <label for="inputAddress2">Product category</label>
                               <input type="text" name="product_category" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" ngModel required>
